--- a/agsci/common/theme/assets/wpsu/_general-blockquote.scss
+++ b/agsci/common/theme/assets/wpsu/_general-blockquote.scss
@@ -1,6 +1,6 @@
 blockquote {
-	margin-top: 2rem;
-	margin-bottom: 2rem;
+	margin-top: 1rem;
+	margin-bottom: 1rem;
 	padding: 2rem 0;
 
 	color: $color-ps-slate-gray;
@@ -37,7 +37,7 @@ blockquote {
 @include media-breakpoint-up(sm) {
 	
 	blockquote {
-		padding: 2rem 3rem;
+		padding: 1rem 3rem;
 		}
 	
 	.home blockquote {
@@ -48,7 +48,7 @@ blockquote {
 @include media-breakpoint-up(lg) {
 	
 	blockquote {
-		padding: 2rem 6rem;
+		padding: 1rem 3rem;
 		font-size: $h2-font-size;
 		}
 	
